reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__serde__struct_rename_differently-4.snap
---
source: reflectapi-demo/src/tests/serde.rs
expression: "reflectapi :: codegen :: openapi :: Spec :: from(& schema)"
---
{
  "openapi": "3.2.0",
  "info": {
    "title": "",
    "description": "",
    "version": "1.0.0"
  },
  "paths": {
    "/inout_test": {
      "description": "",
      "post": {
        "operationId": "inout_test",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/reflectapi_demo.tests.serde.MyStructInput"
              }
            }
          },
          "required": true
        },
        "responses": {
          "200": {
            "description": "200 OK",
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/reflectapi_demo.tests.serde.MyStructOutput"
                }
              }
            }
          }
        }
      }
    }
  },
  "components": {
    "schemas": {
      "reflectapi_demo.tests.serde.MyStructInput": {
        "type": "object",
        "title": "reflectapi_demo.tests.serde.MyStructInput",
        "properties": {}
      },
      "reflectapi_demo.tests.serde.MyStructOutput": {
        "type": "object",
        "title": "reflectapi_demo.tests.serde.MyStructOutput",
        "properties": {}
      }
    }
  }
}
